--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -6,11 +6,11 @@ slug: lsy
 categories: []
 tags: []
 ---
-今早吃完早饭，打算换衣服出门时看到窗外的草树摇摇，想来风大，天会比较冷，于是打开衣柜找件厚衬衣换上。扣扣子的时候，突然感到肚子附近有一阵轻微但明显的压力袭来---啊，衣服小了。这件衬衣跟我两年了，前年去年穿都还比较宽松，应该不会今年突然变小，俺么根据柯南定理，排除一切不可能后，答案再不可接受也得承认---真相是，我又胖了。按了按肚子上的肉，弹弹的，左边按下去右边就鼓起来，总体积不变。按了几下，感觉这手动瘦身似乎不起什么作用，于是深吸口气，诱肚子深入，并趁它没反应过来前赶紧把扣子都扣上。穿好衬衣，披上外套，一阵温热从衣服里袭来。虽然可能是个值得探讨的问题，但我已不想深究者突然的热量到底是出自厚衬衣拔群的保暖效果还是衣服和皮肤在不宽裕的空间里的摩擦了。   
+今早吃完早饭，打算换衣服出门时看到窗外的草树摇摇，想来风大，天会比较冷，于是打开衣柜找件厚衬衣换上。扣扣子的时候，突然感到肚子附近有一阵轻微但明显的压力袭来---啊，衣服小了。这件衬衣跟我两年了，前年去年穿都还比较宽松，应该不会今年突然变小，那么根据柯南定理，排除一切不可能后，答案再不可接受也得承认---真相是，我又胖了。按了按肚子上的肉，弹弹的，左边按下去右边就鼓起来，总体积不变。按了几下，感觉这手动瘦身似乎不起什么作用，于是深吸口气，诱肚子深入，并趁它没反应过来前赶紧把扣子都扣上。穿好衬衣，披上外套，一阵温热从衣服里袭来。虽然可能是个值得探讨的问题，但我已不想深究这突然的热量到底是出自厚衬衣拔群的保暖效果还是衣服和皮肤在不宽裕的空间里的摩擦了。   
 
-昨天下了一整天雨，但今天却异常晴朗。蓝蓝的天，雪白的云，地上看不见一滴水；一出门，吹摇草树的风便吹到了我身上，很冷，但令人精神一震；空气异常清晰，里面似乎还夹着雨后的草树香。没走两步就看到路边一棵伊吕波枫的叶已全红，这让我很惊讶，因为天天往来于这路上，之前竟没有注意到这个变化。难道它是一夜间变红的吗？细看下，不只那棵，周围其它枫树的叶也都或多或少地染了些红。我想或许这不是一夜间发生的变化，只是因为最近过得匆忙，忽略了这眼前的改变。到了实验楼，没着急进去，而是在周围逛了几圈，因为发现研究所里的银杏树叶也全黄了。一排排高大的银杏树，满树亮黄的叶子，头顶是碧蓝的天，它们在眼前幻成一幅重彩的油画，颜色比以往更鲜亮，只是不知是这蓝天把银杏叶衬得更黄了还是这黄叶把天衬得更蓝了。    
+昨天下了一整天雨，但今天却异常晴朗。蓝蓝的天，雪白的云，地上看不见一滴水；一出门，吹摇草树的风便吹到了我身上，很冷，但令人精神一震；空气异常清新，里面似乎还夹着雨后的草树香。没走两步就看到路边一棵伊吕波枫的叶已全红，这让我很惊讶，因为天天往来于这路上，之前竟没有注意到这个变化。难道它是一夜间变红的吗？细看下，不只那棵，周围其它枫树的叶也都或多或少地染了些红。我想或许这不是一夜间发生的变化，只是因为我最近过得匆忙，忽略了这眼前的改变。到了实验楼，没着急进去，而是在周围逛了几圈，因为发现研究所里的银杏树叶也全黄了。一排排高大的银杏树，满树亮黄的叶子，头顶是碧蓝的天，它们在眼前幻成一幅重彩的油画，颜色比以往更鲜亮，看来这蓝天把银杏叶衬得更黄了，而这黄叶也把天衬得更蓝了。    
 
-「原来都十一月末了，正是枫树红和银杏黄的时节啊。」我心想。虽然每天看日历的我本已知道已经十一月末了，但是对我来说，日历上流动的时间跟季节好像是两个不同的东西---日历上日期的变化远不及物候的变化让我惊心。这感觉说起来就像是，啊，原来都十一月末了，我还以为才刚十一月末呢。   
+「原来都十一月末了，正是枫树红和银杏黄的时节啊。」我心想。虽然每天看日历，我本已知道已到十一月末了，但是对我来说，日历上流动的时间跟季节好像是两个不同的东西---日期的变化远不及物候的变化让我惊心。这感觉说起来就像是，啊，原来都十一月末了，我还以为才刚十一月末呢。   
 
 近一段时间来，不时想写点东西，但这想法总是很快就消散了。一来因为懒，二来因为只要多想一会儿就觉得那些东西很是无聊，不值得写下来。我想写点美的东西，但因忙碌且常有思虑，别说自己心里生不出多少美来，连看别人记录的美---诗，画---的心情也不多。突然展现在眼前的红枫黄叶蓝天将我从精神上的快节奏和思虑中拉回现实，这不岁月正好吗？！心静下来了。心静下来的同时，我也有一次记起了那个最近不时在心里浮现却无暇细想的名字，李商隐。   
 
