--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -12,9 +12,9 @@ tags: []
 
 「原来都十一月末了，正是枫树红和银杏黄的时节啊。」我心想。虽然每天看日历，我本已知道已到十一月末了，但是对我来说，日历上流动的时间跟季节好像是两个不同的东西---日期的变化远不及物候的变化让我惊心。这感觉说起来就像是，啊，原来都十一月末了，我还以为才刚十一月末呢。   
 
-近一段时间来，不时想写点东西，但这想法总是很快就消散了。一来因为懒，二来因为只要多想一会儿就觉得那些东西很是无聊，不值得写下来。我想写点美的东西，但因忙碌且常有思虑，别说自己心里生不出多少美来，连看别人记录的美---诗，画---的心情也不多。突然展现在眼前的红枫黄叶蓝天将我从精神上的快节奏和思虑中拉回现实，这不岁月正好吗？！心静下来了。心静下来的同时，我也有一次记起了那个最近不时在心里浮现却无暇细想的名字，李商隐。   
+近段时间，不时想写点东西，但这想法总是很快就消散了。一来因为懒，二来因为只要多想一会儿就觉得那些东西很是无聊，不值得写下来。我想写点美的东西，但因忙碌且常有思虑，别说自己心里生不出多少美来，连看别人记录的美---诗，画---的心情也不多。突然展现在眼前的红枫黄叶蓝天将我从精神上的快节奏和思虑中拉回现实，这不正岁月静好吗？！于是，心静下来了。心静下来的同时，我也又一次记起那个最近不时在心里浮现却无暇细想的名字，李商隐。   
 
-在很多人心里，李商隐是以写晦涩的情诗著名的。但在我看来，这是个极大的误解。如果把李商隐七百来首诗看一遍，会发现情诗只占他写过的诗的极小一部分，而且即使是情诗，其中大多数都写得还算清晰明白。我想之所以会有此误解，除了很少有人把李商隐的诗认真读一遍外，大概还有两方面的原因：一是一些读诗的人当侦探的心超过了正经读诗的心，非要弄清楚李商隐的诗是写给谁的？妻子？情人？如果是情人，哪个情人？只要搞不清楚，就觉得李商隐的诗「晦涩」；二是一些人先入为主地认为李商隐写的诗大概都是情诗，所以把很多和风月无瓜的诗都硬生生往情诗上套。可硬套的东西往往不合适，于是就「晦涩」了。即或睁一只眼闭一只眼地觉得套得好，接下来又马上问，这诗是写给谁的？然后继续搞不清楚，大喊义山的诗不好懂，不好懂啊。完全属于庸人自扰。对于第一点，我觉得诗是表达诗人心中某种情绪的，看诗的人接收到了那情绪就可以了，至于那情绪是为何而生，对读者来说不是十分要紧的事。而对于第二点，举李商隐在解读上最有争议的《锦瑟》来说吧。   
+在很多人心里，李商隐是以写晦涩的情诗著名的。但在我看来，这是个极大的误解。如果把李商隐七百来首诗看一遍，会发现情诗只占他写过的诗的极小一部分；而且即使是情诗，其中大多数都写得还算清晰明白。我想之所以会有此误解，除了很少有人把李商隐的诗认真读一遍外，大概还有两方面的原因：一是一些读诗的人当侦探的心超过了正经读诗的心，非要弄清楚李商隐的诗是写给谁的？妻子？情人？如果是情人，哪个情人？只要搞不清楚，就觉得李商隐的诗「晦涩」；二是一些人先入为主地认为李商隐写的诗大概都是情诗，然后把很多和风月无瓜的诗都硬生生往情诗上套。可硬套的东西往往不合适，于是就「晦涩」了。即或睁一只眼闭一只眼地觉得套得好，接下来又马上问，这诗是写给谁的？然后继续搞不清楚，大喊义山的诗不好懂，不好懂啊。完全属于庸人自扰。对于第一点，我觉得诗是表达诗人心中某种情绪的，看诗的人接收到了那情绪就可以了，至于那情绪是为何而生，对读者来说不是十分要紧的事。而对于第二点，举李商隐在解读上最有争议的《锦瑟》来说吧。   
 
 > 锦瑟无端五十弦，一弦一柱思华年。  
 庄生晓梦迷蝴蝶，望帝春心托杜鹃。  
