--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -21,7 +21,7 @@ tags: []
 沧海月明珠有泪，蓝田日暖玉生烟。  
 此情可待成追忆，只是当时已惘然。   
 
-历史上很多人都注解过这首《锦瑟》，有人说他是写给亡妻的，有人说他是写给一个叫锦瑟的情人的。（不过要说注解《锦瑟》，真正的秀儿还是咱钟书先生，不过今天不提他了）但在我看来，这诗是典型的谜底就在谜面上，第一句的「一弦一柱思华年」即是主旨。李商隐回想自己的青春时代，那感觉如庄生梦蝶，美好依稀在记忆中，却再回不去了；又像杜宇把放不下的心托给杜鹃鸟，李商隐则把这逝去的青春年华托给了回忆，虽然无助，但聊胜于无。「沧海月明」跟「蓝田日暖」都是很美的意想，珠和玉则象征李商隐的青春才情。往事一幕幕，都成了现在珍贵的记忆，而当初风华正茂的青年李商隐却不自知。如果用一本书名来概括这首诗，「追忆似水年华」就很好；如果用一句词来概括这首诗，那就是「当初只道是寻常」了。当然， 这个解读是否对，我们现在已无法叫醒李商隐来求证了。但是如果接受这谜面就在谜面上的理解，则一切都顺理成章，不必再去穿凿附会，以偏概全地折腾这首诗了。其实如果不先入为主地认为这首诗是情诗，那就会发现这首诗里没有用任何一个会让人特别地联想起「爱情」的意象的这事实是多么地显而易见。   
+历史上很多人都注解过这首《锦瑟》，有人说他是写给亡妻的，有人说他是写给一个叫锦瑟的情人的。（不过要说注解《锦瑟》，真正的秀儿还是咱钟书先生，不过今天不提他了）但在我看来，这诗是典型的谜底就在谜面上，第一句的「一弦一柱思华年」即是主旨。李商隐回想自己的青春时代，那感觉如庄生梦蝶，美好依稀在记忆中，却再回不去了；又像杜宇把放不下的心托给杜鹃鸟，李商隐则把这逝去的青春年华托给了回忆，虽然无助，但聊胜于无。「沧海月明」跟「蓝田日暖」都是很美的意想，珠和玉则象征李商隐的青春才情。往事一幕幕，都成了现在珍贵的记忆，而当初风华正茂的青年李商隐却不自知。如果用一本书名来概括这首诗，「追忆似水年华」就很好；如果用一句词来概括这首诗，那就是「当初只道是寻常」了。当然， 这个解读是否对，我们现在已无法叫醒李商隐来求证了。但是如果接受这谜面就在谜面上的理解，则一切都顺理成章，不必再去穿凿附会，以偏概全地折腾这首诗了。其实如果不先入为主地认为这首诗是情诗，那就容易发现这首诗里没有用任何一个会让人特别地联想起「爱情」的意象。   
 
 人的年华会逝去，李商隐感到悲伤，那他看到「不老」的物事会生出什么感叹呢？李商隐说：
 
