--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -41,7 +41,7 @@ tags: []
 惟有绿荷红菡萏，卷舒开合任天真。  
 此花此叶常相映，翠减红衰愁杀人。   
 
-答案是，怎么老去都不好。李商隐认为荷花花叶「卷舒开合任天真」时虽然不错，但到「翠减红衰愁杀人」就「愁杀人」了。可是在「年华注定消逝」的前提下，还有比花叶相映，一起绿减红衰更优的解吗？反正我想不到了，嗯，一起慢慢变老就挺好。    
+额，怎么老去都不好。李商隐认为荷花荷叶「卷舒开合任天真」时虽然不错，但到「翠减红衰愁杀人」就「愁杀人」了。可是在「年华注定消逝」的前提下，还有比花叶相映，一起绿减红衰更优的解吗？反正我想不到了，嗯，一起慢慢变老就挺好。    
 
 又，既然生而为人，则不可避免会难过，而很多难过都是由于太执着。你看李商隐：
 
