--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -43,12 +43,12 @@ tags: []
 
 额，怎么老去都不好。李商隐认为荷花荷叶「卷舒开合任天真」时虽然不错，但到「翠减红衰愁杀人」就「愁杀人」了。可是在「年华注定消逝」的前提下，还有比花叶相映，一起绿减红衰更优的解吗？反正我想不到了，嗯，一起慢慢变老就挺好。    
 
-又，既然生而为人，则不可避免会难过，而很多难过都是由于太执着。你看李商隐：
+又，既然生而为人，不可避免会难过，而很多难过都是由于太执着。你看李商隐：
 
 > 荷叶生时春恨生，荷叶枯时秋恨成。  
 深知身在情长在，怅望江头江水声。    
 
-这锅甩得漂亮，但估计诗里的荷叶心里是不平的：你自己执着，无法自拔于情，扯我的荣枯干嘛。控制变量，既然不管荣枯你都恨，那就不关我的事啊！「爬远点，莫挨老子」。但荷叶抱的不平没什么用，因为李商隐在这首诗里有个无法被打败的身份，他是作者，于是荷叶只好忍了。无法打败李商隐作者光环的荷叶放弃了争辩，现在她或许只是在纳闷，李商隐「怅望」在想什么呢？是在想身在则恨在，身灭自然就解脱了；还是在想，身在情在，哪怕痛苦，也要保住这身来存情？不过既然怅然了，估计李商隐自己也未必想得清楚。于是荷叶静静立在李商隐身旁，陪着他一起发呆。      
+这「恨」得多执着！但估计诗里的荷叶心里是不平的：你自己执着，无法自拔于情，扯我的荣枯干嘛。控制变量，既然不管荣枯你都恨，那就不关我的事啊！「爬远点，莫挨老子」。但荷叶抱的不平没什么用，因为李商隐在这首诗里有个无法被打败的身份，他是作者，于是荷叶只好忍了。无法打败李商隐作者光环的荷叶放弃了争辩，现在她或许只是在纳闷，李商隐「怅望」在想什么呢？是在想身在则恨在，身灭自然就解脱了；还是在想，身在情在，哪怕痛苦，也要保住这身来存情？不过既然怅然了，估计李商隐自己也未必想得清楚。于是荷叶静静立在李商隐身旁，陪着他一起发呆。      
 
 为什么李商隐对时光流转很敏感呢？因为他孤独，或者说，他害怕孤独。
 
