--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -57,7 +57,7 @@ tags: []
 
 从夜晚的「烛影深」，到黎明的「晓星沉」，李商隐用两句看似写景的话告诉读者他其实一夜未眠，他在想什么，思念什么人吗？我们不知道，只知道这一夜里他体会到的孤单让他生出了对月宫里的嫦娥同情---如果她也这么孤单地度过一夜夜，那她该后悔吃了不老药吧！   
 
-是的，李商隐不想衰老，但比衰老更让他难过的是孤独地活着。     
+是的，李商隐不想衰老，但比衰老更让他害怕的是孤独地活着。     
 
 可人嫦娥难过吗？不一定，说不定人家成了仙就没有「凡心」了。孤独或许只是凡人能感受到的。不过，李商隐不管这个，他一孤单就 cue 嫦娥：
 
@@ -82,9 +82,9 @@ tags: []
 
 > 柳枝，洛中里娘也。父饶好贾，风波死湖上。其母不念他儿子，独念柳枝。生十七年，涂妆绾髻，未尝竟，已复起去。吹叶嚼蕊，调丝擫管，作天海风涛之曲，幽忆怨断之音。居其旁，与其家接故往来者，闻十年尚相与，疑其醉眠梦物断不娉。余从昆让山，比柳枝居为近。他日春曾阴，让山下马柳枝南柳下，咏余《燕台诗》。柳枝惊问：“谁人有此？谁人为是？”让山谓曰：“此吾里中少年叔耳。”柳枝手断长带，结让山为赠叔乞诗。明日，余比马出其巷，柳枝丫鬟毕妆，抱立扇下，风障一袖，指曰：“若叔是？后三日，邻当去溅裙水上，以博山香待，与郎俱过。”余诺之。会所友有偕当诣京师者，戏盗余卧装以先，不果留。雪中让山至，且曰：“东诸侯取去矣。”明年，让山复东，相背于戏上，因寓诗以墨其故处云。    
 
-虽然造化弄人，但或许遗憾也是种美---没有二人间的磕磕碰碰，也没有柴米油盐等琐事烦心，若干年后，柳枝可能记得的依然是那个惊鸿一瞥的李商隐和他美丽的诗，而李商隐记得的依然是那个才情无双，勇敢大胆与他相约的柳枝。    
+虽然造化弄人，但或许遗憾也是种美---没有二人间的磕磕碰碰，也没有柴米油盐等琐事烦心，若干年后，柳枝可能记得的依然是那个惊鸿一瞥的李商隐和他美丽的诗，而李商隐记得的依然是那个才情无双，勇敢大胆地与他相约的柳枝。    
 
-生而为人，时光不可避免地流转，但我想他们在彼此心里都不会老去吧。    
+生而为人，时光不可避免地流转，但我想他们在彼此心里或许都不会老去吧。    
 
 
 
