--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -57,7 +57,7 @@ tags: []
 
 从夜晚的「烛影深」，到黎明的「晓星沉」，李商隐用两句看似写景的话告诉读者他其实一夜未眠，他在想什么，思念什么人吗？我们不知道，只知道这一夜里他体会到的孤单让他生出了对月宫里的嫦娥同情---如果她也这么孤单地度过一夜夜，那她该后悔吃了不老药吧！   
 
-是的，李商隐不想衰老，但比衰老更让他害怕的是孤独地活着。     
+是的，虽然李商隐害怕年华逝去，但比这更让他害怕的是孤独地活着。     
 
 可人嫦娥难过吗？不一定，说不定人家成了仙就没有「凡心」了。孤独或许只是凡人能感受到的。不过，李商隐不管这个，他一孤单就 cue 嫦娥：
 
