--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -76,7 +76,7 @@ tags: []
 
 然而，李商隐回家了吗？没有。「何当共剪……」的想象就像卖火柴的小女孩划燃的那根火柴，当火熄灭后，他依然在远地孤独地面对着巴山夜雨，然后无助地划燃第二根火柴。   
 
-他能用如此优美的诗来记录自己的孤单，因为他有颗敏感的心；而他之所以会孤单，也是因为他有颗敏感的心。   
+他能用如此优美的诗来记录自己的孤单，因为他有颗敏感的心；而他之所以这么害怕孤单，也是因为他有颗敏感的心。   
 
 不知道李商隐会不会在某个孤单的晚上想起他青年时遇到的一个叫柳枝的女孩？应该会的，因为他曾这样回忆过她，并为她写了五首诗。
 
