--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -8,11 +8,11 @@ tags: []
 ---
 今早吃完早饭，打算换衣服出门时看到窗外的草树摇摇，想来风大，天会比较冷，于是打开衣柜找件厚衬衣换上。扣扣子的时候，突然感到肚子附近有一阵轻微但明显的压力袭来---啊，衣服小了。这件衬衣跟我两年了，前年去年穿都还比较宽松，应该不会今年突然变小，那么根据柯南定理，排除一切不可能后，答案再不可接受也得承认---真相是，我又胖了。按了按肚子上的肉，弹弹的，左边按下去右边就鼓起来，总体积不变。按了几下，感觉这手动瘦身似乎不起什么作用，于是深吸口气，诱肚子深入，并趁它没反应过来前赶紧把扣子都扣上。穿好衬衣，披上外套，一阵温热从衣服里袭来。虽然可能是个值得探讨的问题，但我已不想深究这突然的热量到底是出自厚衬衣拔群的保暖效果还是衣服和皮肤在不宽裕的空间里的摩擦了。   
 
-昨天下了一整天雨，但今天却异常晴朗。蓝蓝的天，雪白的云，地上看不见一滴水；一出门，吹摇草树的风便吹到了我身上，很冷，但令人精神一震；空气异常清新，里面似乎还夹着雨后的草树香。没走两步就看到路边一棵伊吕波枫的叶已全红，这让我很惊讶，因为天天往来于这路上，之前竟没有注意到这个变化。难道它是一夜间变红的吗？细看下，不只那棵，周围其它枫树的叶也都或多或少地染了些红。我想或许这不是一夜间发生的变化，只是因为我最近过得匆忙，忽略了这眼前的改变。到了实验楼，没着急进去，而是在周围逛了几圈，因为发现研究所里的银杏树叶也全黄了。一排排高大的银杏树，满树亮黄的叶子，头顶是碧蓝的天，它们在眼前幻成一幅重彩的油画，颜色比以往更鲜亮，看来这蓝天把银杏叶衬得更黄了，而这黄叶也把天衬得更蓝了。    
+昨天下了一整天雨，但今天却异常晴朗。蓝蓝的天，雪白的云，地上看不见一滴水；一出门，吹摇草树的风便吹到了我身上，很冷，但令人精神一震；空气异常清新，里面还夹着雨后的草树香。没走两步就看到路边一棵伊吕波枫的叶已全红，这让我很惊讶，因为天天往来于这路上，之前竟没有注意到这个变化。难道它是一夜间变红的吗？细看下，不只那棵，周围其它枫树的叶也都或多或少地染了些红。我想或许这不是一夜间发生的变化，只是因为我最近过得匆忙，忽略了这眼前的改变。到了实验楼，没着急进去，而是在周围逛了几圈，因为发现研究所里的银杏树叶也全黄了。一排排高大的银杏树，满树亮黄的叶子，头顶是碧蓝的天，它们在眼前幻成一幅重彩的油画，颜色比以往更鲜亮，看来这蓝天把银杏叶衬得更黄了，而这黄叶也把天衬得更蓝了。    
 
 「原来都十一月末了，正是枫树红和银杏黄的时节啊。」我心想。虽然每天看日历，我本已知道已到十一月末了，但是对我来说，日历上流动的时间跟季节好像是两个不同的东西---日期的变化远不及物候的变化让我惊心。这感觉说起来就像是，啊，原来都十一月末了，我还以为才刚十一月末呢。   
 
-近段时间，不时想写点东西，但这想法总是很快就消散了。一来因为懒，二来因为只要多想一会儿就觉得那些东西很是无聊，不值得写下来。我想写点美的东西，但因忙碌且常有思虑，别说自己心里生不出多少美来，连看别人记录的美---诗，画---的心情也不多。突然展现在眼前的红枫黄叶蓝天将我从精神上的快节奏和思虑中拉回现实，这不正岁月静好吗？！于是，心静下来了。心静下来的同时，我也又一次记起那个最近不时在心里浮现却无暇细想的名字，李商隐。   
+近段时间，不时想写点东西，但这想法总是很快就消散了。一来因为懒，二来因为只要多想一会儿就觉得那些东西很是无聊，不值得写下来。我想写点美的东西，但因近来忙碌且常有思虑，别说自己心里生不出多少美来，连看别人记录的美---诗，画---的心情也不多。突然展现在眼前的红枫黄叶蓝天将我从精神上的快节奏和思虑中拉回现实，这不正岁月静好吗？！于是，心静下来了。心静的同时，我也又一次记起那个最近不时在心里浮现却无暇细想的名字，李商隐。   
 
 在很多人心里，李商隐是以写晦涩的情诗著名的。但在我看来，这是个极大的误解。如果把李商隐七百来首诗看一遍，会发现情诗只占他写过的诗的极小一部分；而且即使是情诗，其中大多数都写得还算清晰明白。我想之所以会有此误解，除了很少有人把李商隐的诗认真读一遍外，大概还有两方面的原因：一是一些读诗的人当侦探的心超过了正经读诗的心，非要弄清楚李商隐的诗是写给谁的？妻子？情人？如果是情人，哪个情人？只要搞不清楚，就觉得李商隐的诗「晦涩」；二是一些人先入为主地认为李商隐写的诗大概都是情诗，然后把很多和风月无瓜的诗都硬生生往情诗上套。可硬套的东西往往不合适，于是就「晦涩」了。即或睁一只眼闭一只眼地觉得套得好，接下来又马上问，这诗是写给谁的？然后继续搞不清楚，大喊义山的诗不好懂，不好懂啊。完全属于庸人自扰。对于第一点，我觉得诗是表达诗人心中某种情绪的，看诗的人接收到了那情绪就可以了，至于那情绪是为何而生，对读者来说不是十分要紧的事。而对于第二点，举李商隐在解读上最有争议的《锦瑟》来说吧。   
 
@@ -21,7 +21,7 @@ tags: []
 沧海月明珠有泪，蓝田日暖玉生烟。  
 此情可待成追忆，只是当时已惘然。   
 
-历史上很多人都注解过这首《锦瑟》，有人说他是写给亡妻的，有人说他是写给一个叫锦瑟的情人的。（不过要说注解《锦瑟》，真正的秀儿还是咱钟书先生，不过今天不提他了）但在我看来，这诗是典型的谜底就在谜面上，第一句的「一弦一柱思华年」即是主旨。李商隐回想自己的青春时代，那感觉如庄生梦蝶，美好依稀在记忆中，却再回不去了；又像杜宇把放不下的心托给杜鹃鸟，李商隐则把这逝去的青春年华托给了回忆，虽然无助，但聊胜于无。「沧海月明」跟「蓝田日暖」都是很美的意想，珠和玉则象征李商隐的青春才情。往事一幕幕，都成了现在珍贵的记忆，而当初风华正茂的青年李商隐却不自知。如果用一本书名来概括这首诗，「追忆似水年华」就很好；如果用一句词来概括这首诗，那就是「当初只道是寻常」了。当然， 这个解读是否对，我们现在已无法叫醒李商隐来求证了。但是如果接受这谜面就在谜面上的理解，则一切都顺理成章，不必再去穿凿附会，以偏概全地折腾这首诗了。其实如果不先入为主地认为这首诗是情诗，那就容易发现这首诗里没有用任何一个会让人特别地联想起「爱情」的意象。   
+历史上很多人都注解过这首《锦瑟》，有人说他是写给亡妻的，有人说他是写给一个叫锦瑟的情人的。（不过要说注解《锦瑟》，真正的秀儿还是咱钟书先生，不过今天不提他了）但在我看来，这诗是典型的谜底就在谜面上，第一句的「一弦一柱思华年」即是主旨。李商隐回想自己的青春时代，那感觉如庄生梦蝶，美好依稀在记忆中，却再回不去了；又像杜宇把放不下的心托给杜鹃鸟，李商隐则把这逝去的青春年华托给了回忆，虽然无助，但聊胜于无。「沧海月明」跟「蓝田日暖」都是很美的意想，珠和玉则象征李商隐的青春才情。往事一幕幕，都成了现在珍贵的记忆，而当初风华正茂的青年李商隐却不自知。如果用一本书名来概括这首诗，「追忆似水年华」就很好；如果用一句词来概括这首诗，那就是「当初只道是寻常」了。当然， 这个解读是否对，我们现在已无法叫醒李商隐来求证了。但是如果接受这谜底就在谜面上的理解，则一切都顺理成章，不必再去穿凿附会，以偏概全地折腾这首诗了。其实如果不先入为主地认为这首诗是情诗，那就容易发现这首诗里没有用任何一个会让人特别地联想起「爱情」的意象。   
 
 人的年华会逝去，李商隐感到悲伤，那他看到「不老」的物事会生出什么感叹呢？李商隐说：
 
@@ -74,7 +74,7 @@ tags: []
 > 君问归期未有期，巴山夜雨涨秋池。  
 何当共剪西窗烛，却话巴山夜雨时。    
 
-然而，李商隐回家了吗？没有。「何当共剪……」的想象就像卖火柴的小女孩划燃的那根火柴，当火熄灭后，他依然在远地孤独地面对着巴山夜雨，然后无助地划燃第二根火柴。   
+然而，李商隐回家了吗？没有。「何当共剪……」的想象就像卖火柴的小女孩划燃的那根火柴，当火熄灭后，他依然在远地孤独地面对着巴山夜雨，然后无助地划燃第二根。   
 
 他能用如此优美的诗来记录自己的孤单，因为他有颗敏感的心；而他之所以这么害怕孤单，也是因为他有颗敏感的心。   
 
