--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -12,7 +12,7 @@ tags: []
 
 「原来都十一月末了，正是枫树红和银杏黄的时节啊。」我心想。虽然每天看日历，我本已知道已到十一月末了，但是对我来说，日历上流动的时间跟季节好像是两个不同的东西---日期的变化远不及物候的变化让我惊心。这感觉说起来就像是，啊，原来都十一月末了，我还以为才刚十一月末呢。   
 
-近段时间，不时想写点东西，但这想法总是很快就消散了。一来因为懒，二来因为只要多想一会儿就觉得那些东西很是无聊，不值得写下来。我想写点美的东西，但因近来忙碌且常有思虑，别说自己心里生不出多少美来，连看别人记录的美---诗，画---的心情也不多。突然展现在眼前的红枫黄叶蓝天将我从精神上的快节奏和思虑中拉回现实，这不正岁月静好吗？！于是，心静下来了。心静的同时，我也又一次记起那个最近不时在心里浮现却无暇细想的名字，李商隐。   
+近段时间，不时想写点东西，但这想法总是很快就消散了。一来因为懒，二来因为只要多想一会儿就觉得那些东西很是无聊，不值得写下来。我想写点美的东西，但因近来忙碌且常有思虑，别说自己心里生不出多少美来，连看别人记录的美---诗，画---的心情也不多。突然展现在眼前的红枫黄叶蓝天将我从精神上的快节奏和思虑中拉回现实，这不正岁月静好吗？！于是，久违，心静下来了。心静的同时，我也又一次记起那个最近不时在心里浮现却无暇细想的名字，李商隐。   
 
 在很多人心里，李商隐是以写晦涩的情诗著名的。但在我看来，这是个极大的误解。如果把李商隐七百来首诗看一遍，会发现情诗只占他写过的诗的极小一部分；而且即使是情诗，其中大多数都写得还算清晰明白。我想之所以会有此误解，除了很少有人把李商隐的诗认真读一遍外，大概还有两方面的原因：一是一些读诗的人当侦探的心超过了正经读诗的心，非要弄清楚李商隐的诗是写给谁的？妻子？情人？如果是情人，哪个情人？只要搞不清楚，就觉得李商隐的诗「晦涩」；二是一些人先入为主地认为李商隐写的诗大概都是情诗，然后把很多和风月无瓜的诗都硬生生往情诗上套。可硬套的东西往往不合适，于是就「晦涩」了。即或睁一只眼闭一只眼地觉得套得好，接下来又马上问，这诗是写给谁的？然后继续搞不清楚，大喊义山的诗不好懂，不好懂啊。完全属于庸人自扰。对于第一点，我觉得诗是表达诗人心中某种情绪的，看诗的人接收到了那情绪就可以了，至于那情绪是为何而生，对读者来说不是十分要紧的事。而对于第二点，举李商隐在解读上最有争议的《锦瑟》来说吧。   
 
@@ -41,21 +41,21 @@ tags: []
 惟有绿荷红菡萏，卷舒开合任天真。  
 此花此叶常相映，翠减红衰愁杀人。   
 
-额，怎么老去都不好。李商隐认为荷花荷叶「卷舒开合任天真」时虽然不错，但到「翠减红衰愁杀人」就「愁杀人」了。可是在「年华注定消逝」的前提下，还有比花叶相映，一起绿减红衰更优的解吗？反正我想不到了，嗯，一起慢慢变老就挺好。    
+额，怎么老去都不好。李商隐认为荷花荷叶一起「卷舒开合」时虽然不错，但到「翠减红衰」时就「愁杀人」了。可是在「年华注定消逝」的前提下，还有比花叶相映，一起绿减红衰更优的解吗？反正我想不到了，嗯，一起慢慢变老就挺好。    
 
 又，既然生而为人，不可避免会难过，而很多难过都是由于太执着。你看李商隐：
 
 > 荷叶生时春恨生，荷叶枯时秋恨成。  
 深知身在情长在，怅望江头江水声。    
 
-这「恨」得多执着！但估计诗里的荷叶心里是不平的：你自己执着，无法自拔于情，扯我的荣枯干嘛。控制变量，既然不管荣枯你都恨，那就不关我的事啊！「爬远点，莫挨老子」。但荷叶抱的不平没什么用，因为李商隐在这首诗里有个无法被打败的身份，他是作者，于是荷叶只好忍了。无法打败李商隐作者光环的荷叶放弃了争辩，现在她或许只是在纳闷，李商隐「怅望」时在想什么呢？是在想身在则恨在，身灭自然就解脱了；还是在想，身在情在，那哪怕痛苦，也要保住这身来存那份情思？不过既然怅然了，估计李商隐自己也未必想得清楚。于是荷叶静静立在李商隐身旁，陪着他一起发呆。      
+这「恨」得多执着！但估计诗里的荷叶心里是不平的：你自己执着，无法自拔于情，扯我的荣枯干嘛。控制变量，既然不管荣枯你都恨，那就不关我的事啊！「爬远点，莫挨老子」。但荷叶抱的不平没什么用，因为李商隐在这首诗里有个无法被打败的身份，他是作者。于是荷叶只好忍了。无法打败李商隐作者光环的荷叶放弃了争辩，现在她静静里在一旁，心里或许只是在猜，李商隐「怅望」时在想什么呢？是在想身在则恨在，身灭自然就解脱了；还是在想，身在情在，那哪怕痛苦，也要保住这身来存那份情思？不过既然怅然了，估计李商隐自己也未必想得清楚。于是荷叶静静立在李商隐身旁，陪着他一起发呆。      
 
 为什么李商隐对时光流转很敏感呢？因为他孤独，或者说，他害怕孤独。
 
 > 云母屏风烛影深，长河渐落晓星沉。  
 嫦娥应悔偷灵药，碧海青天夜夜心。
 
-从夜晚的「烛影深」，到黎明的「晓星沉」，李商隐用两句看似写景的话告诉读者他其实一夜未眠，他在想什么，思念什么人吗？我们不知道，只知道这一夜里他体会到的孤单让他生出了对月宫里的嫦娥同情---如果她也这么孤单地度过一夜夜，那她该后悔吃了不老药吧！   
+从夜晚的「烛影深」，到黎明的「晓星沉」，李商隐用两句看似写景的话告诉读者他其实一夜未眠。他在想什么，思念什么人吗？我们不知道，只知道这一夜里他体会到的孤单让他生出了对月宫里的嫦娥同情---如果她也这么孤单地度过一夜夜，那她该后悔吃了不老药吧！   
 
 是的，虽然李商隐害怕年华逝去，但比这更让他害怕的是孤独地活着。     
 
@@ -74,7 +74,7 @@ tags: []
 > 君问归期未有期，巴山夜雨涨秋池。  
 何当共剪西窗烛，却话巴山夜雨时。    
 
-然而，李商隐回家了吗？没有。「何当共剪……」的想象就像卖火柴的小女孩划燃的那根火柴，当火熄灭后，他依然在远地孤独地面对着巴山夜雨，然后无助地划燃第二根。   
+然而，李商隐一想就能回家了吗？不是。「何当共剪……」的想象就像卖火柴的小女孩划燃的那根火柴，当火熄灭后，他依然在远地孤独地面对着巴山夜雨，然后无助地划燃第二根。   
 
 他能用如此优美的诗来记录自己的孤单，因为他有颗敏感的心；而他之所以这么害怕孤单，也是因为他有颗敏感的心。   
 
@@ -82,7 +82,7 @@ tags: []
 
 > 柳枝，洛中里娘也。父饶好贾，风波死湖上。其母不念他儿子，独念柳枝。生十七年，涂妆绾髻，未尝竟，已复起去。吹叶嚼蕊，调丝擫管，作天海风涛之曲，幽忆怨断之音。居其旁，与其家接故往来者，闻十年尚相与，疑其醉眠梦物断不娉。余从昆让山，比柳枝居为近。他日春曾阴，让山下马柳枝南柳下，咏余《燕台诗》。柳枝惊问：“谁人有此？谁人为是？”让山谓曰：“此吾里中少年叔耳。”柳枝手断长带，结让山为赠叔乞诗。明日，余比马出其巷，柳枝丫鬟毕妆，抱立扇下，风障一袖，指曰：“若叔是？后三日，邻当去溅裙水上，以博山香待，与郎俱过。”余诺之。会所友有偕当诣京师者，戏盗余卧装以先，不果留。雪中让山至，且曰：“东诸侯取去矣。”明年，让山复东，相背于戏上，因寓诗以墨其故处云。    
 
-虽然造化弄人，但或许遗憾也是种美---没有二人间的磕磕碰碰，也没有柴米油盐等琐事烦心，若干年后，柳枝可能记得的依然是那个惊鸿一瞥的李商隐和他美丽的诗，而李商隐记得的依然是那个才情无双，勇敢大胆地与他相约的柳枝。    
+虽然造化弄人，但或许遗憾也是种美---没有二人间的磕磕碰碰，也没有柴米油盐等琐事烦心，若干年后，柳枝可能记得的依然是那个惊鸿一瞥的李商隐和他美丽的诗；而李商隐记得的依然是那个才情无双，勇敢大胆地与他相约的柳枝。    
 
 生而为人，时光不可避免地流转，但我想他们在彼此心里或许都不会老去吧。    
 
