--- a/content/cn/2021-11-23-lsy.md
+++ b/content/cn/2021-11-23-lsy.md
@@ -74,7 +74,7 @@ tags: []
 > 君问归期未有期，巴山夜雨涨秋池。  
 何当共剪西窗烛，却话巴山夜雨时。    
 
-然而，李商隐一想就能回家了吗？不是。「何当共剪……」的想象就像卖火柴的小女孩划燃的那根火柴，当火熄灭后，他依然在远地孤独地面对着巴山夜雨，然后无助地划燃第二根。   
+然而，李商隐一想就能回家了吗？不能。「何当共剪……」的想象就像卖火柴的小女孩划燃的那根火柴，当火熄灭后，他依然在远地孤独地面对着巴山夜雨，然后无助地划燃第二根。   
 
 他能用如此优美的诗来记录自己的孤单，因为他有颗敏感的心；而他之所以这么害怕孤单，也是因为他有颗敏感的心。   
 
