--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -6,58 +6,58 @@ slug: myhs
 categories: []
 tags: []
 ---
-小学前两年，我在一个乡镇小学念书，从三年级开始转学到了县里。那时我一直不知道如何融入新环境，而时间并不等我，和同学们还没完全熟悉我就升入初中了。初中三年我交了很多朋友，但上高中时又要分开了。因为那时我们县初中的孩子一般都去市里上高中，在县本地高中上学的大多都是周边乡镇来的学生。和我要好的同学们都要去市里读高中了，虽然我的成绩足以进入市里的很好的高中，但我因为不想住校而决定留在县里。    
+小学前两年，我在一个乡镇小学念书，从三年级开始转学到了县里。那时我一直不知道如何融入新环境，而时间并不等我，和同学们还没完全熟悉我就升入初中了。初中三年我交了很多朋友，但上高中时又要分开了。因为那时我们县初中的孩子一般都去市里上高中，在县本地高中上学的大多都是周边乡镇来的学生。和我要好的同学们都要去市里读高中了，虽然我的成绩足以进入市里很好的高中，但我因为不想住校而决定留在县里。    
 
 ### 七班
 
-高中开学那天，我去学校报道，被分在了高一七班。走进教室后，我看到那些来自农村新同学，感到十分熟悉和亲切。虽然那时我在城里已经待了几年了，交了很多朋友，但看到那些同学时，我觉得自己好像从来没有离开过农村，可以立刻无缝融入他们。初次见面，同学们互相问好，大家脸上都是灿烂的笑。       
+高中开学那天，我去学校报道，被分在了高一七班。走进教室后，我看到那些来自农村新同学，朴素的衣着，憨厚的笑容，让我感到十分熟悉和亲切。虽然那时我在城里已经待了几年了，交了很多朋友，但看到那些同学时，我觉得自己好像从来没有离开过农村，可以立刻无缝融入他们。初次见面，同学们互相问好，大家脸上都是灿烂的笑。       
 
-同学们都到了，那老师呢？很快，我就见到了老师们。他们大多是二十出头，刚大学毕业的学生。那时，我们县中在全市中学校里是敬陪末座的那种，师资本来就贫乏，让情况雪上加霜的是我入学的那年，县中有个复读班出了两个大神，高考考到了市里的前几名。这成绩成功引起了市里各大高中的注意，于是他们纷纷出手，又薅走了部分本来就所剩不多的优秀老师。为应对师资的严重匮乏，学校去川内的一个师范院校拉了两车刚毕业的学生过来填充。    
+同学们都到了，那老师呢？很快，我就见到了老师们。他们大多是二十出头，刚毕业的大学生。那时，我们县中在全市中学校里是敬陪末座的那种，留不住好老师，让情况雪上加霜的是我入学的那年，县中有个复读班出了两个大神，高考考到了市里的前几名。这成绩成功引起了市里各大高中的注意，于是他们纷纷出手，又薅走了部分本来就所剩不多的优秀老师。于是，为应对师资的严重匮乏，学校去川内的一个师范院校拉了两车刚毕业的学生过来填充。    
 
 高一上学期波澜不惊地过去了，下学期开学回校时，我发现教室突然空了好多。高一开学时，七班有 66 个人，但下期回来时只剩 44 个了。看着教室后头空出来的一大片地，我有点发蒙，问同学们，其他人去哪儿了？他们告诉我，有的回家务农了，有的外出打工了，有些还打算上学，但没钱，家里还在想办法。看着教室后头空荡荡的桌椅，我什么话也说不出。由于家里比较重视教育，我一向认为读书是理所当然的，小学读完上中学，中学读完上大学。但这空空的教室让我心情很沉重，好像有个什么东西，突然苍老了；也明白了在我看来的理所当然，对另一些人来说却无比困难。从那时候开始，我心里有了两个七班，一个是刚入学时那个饱满的，大家脸上洋溢的笑容的七班；另一个是那空空的，让我无言的七班。   
 
 ### 小芳  
 
-小芳姓谢，是个面容清癯，身材苗条的女孩子，头发垂到比肩膀稍低的地方，很直，有时会绑起来。她常穿一条蓝色牛仔裤，由于人比较瘦，那牛仔裤看起来很宽松。小芳话很少，说话时声音也很低，印象中听起来很温柔。我不知道她年纪比我大还是小，只是记得她跟我说话时很多都是嘱咐的语气。嘱咐的是些什么事现在完全想不起来了，只是还记得那细心的语气。有时课间我跟朋友们出去玩的时候，她会坐到我位子上，帮我把散乱的书收起来。要是我回教室的时候正好碰到她在帮我理书，就站一旁等着她。「不知道这回能管多久？」有时她理完后会拍着书有点无奈地笑着对我说。     
+小芳姓谢，是个面容清癯，身材苗条的女孩子，头发垂到比肩膀稍低的地方，很直，有时会绑起来。她常穿一条蓝色牛仔裤，由于人比较瘦，那牛仔裤看起来很宽松。小芳话很少，说话时声音也很低，印象中听起来很温柔。我不知道她年纪比我大还是小，只是记得她跟我说话时很多都是嘱咐的语气。嘱咐的是些什么事现在完全想不起来了，只是还记得那细心。有时课间我跟朋友们出去玩的时候，她会坐到我位子上，帮我把散乱的书收起来。要是我回教室的时候正好碰到她在帮我理书，就站一旁等着她。「不知道这回能管多久？」有时，她理完后会拍着书有点无奈地笑着对我说。     
 
 高一下期的一天，她走到我桌旁，示意我从座位上起来。然后她就坐到我位置上整理起书来，神色凝重。她边理边跟我说了些话，还是嘱咐的语气，温柔的声音。最后，她站起来有点神色惨淡地跟我说，以后你得自己理了。我感觉她很难过，但却不知道为什么。那天后，小芳就再也没有来上学了。   
 
-后来听到些关于她退学原因的传言，我不知道真假。不过，是真是假都无所谓，因为我对小芳的记忆定格在了她站起来的那一刻。那时的我是个感觉迟钝的人，如果能穿越回去那一瞬间，我会替自己问她怎么了，为什么难过？虽然我知道问不问，结果都不大可能改变，但真希望那时能问出口，而不是傻傻地站在那里。   
+后来听到些关于她退学原因的传言，我不知道真假。不过，是真是假都无所谓，因为我对小芳的记忆定格在了她站起来的那一刻。那时的我是个感觉迟钝的人，如果能穿越回去那一瞬间，我会替自己问她怎么了，为什么难过？虽然我知道问不问，结果都不大可能改变，但真希望那时能问出口，而不是只傻傻地站在那里。   
 
 ### 国敏  
 
-国敏坐在我后排的右方，是个短发，大眼睛的姑娘。我跟同桌洪下课时常转过身跟国敏和她同桌聊天。国敏是个有点害羞的姑娘，但却是唯一一个肯当面告诉我我哪些地方做得不好的人。如前所说，我跟那些来自周边乡镇的同学有种天然的亲切感，所以很快就跟他们打成了一片，成为了好朋友。但我不知道的是，虽然在我的眼里，我跟他们是一样来自乡镇的人，但在他们眼里我却始终是个城里学生，只是一个比较好打交道而已。我们虽然是朋友，但是中间却有个我看不见的隔阂。我跟初中朋友们一起讨论问题或聊天时，常开玩笑互相打击，口头禅是「笨蛋，这都不会」等等。但大家互相都如此，并不觉得有什么不好。我跟这些新朋友相处，有时他们会拿一些题来问我，我还是像跟以前的朋友一样用这个方式说话，且一直没有发现这有什么问题。但在那些朋友听来，这个「笨蛋」不是来自一个朋友无心的玩笑，而像是来自一个学习远比他们好的城里学生居高临下的轻蔑。可他们心里又觉得我不是会用这种轻蔑的语气说话的人，所以大家虽然听到我这么说话心里不舒服，但都默默忍了，始终没有人跟我提过这事。直到一天，国敏叫住我，并在犹豫了一下后把这些事都告诉我。她说，其实大家一起议论过几次我为什么会那么说话，但最后他们都替我开脱，说我应该是没有什么恶意的。虽然知道了这件事，我开始有意识地改变说话的方式，但我当时依然没有明白为什么这句以前常说的口头禅在那些同学听来会有些刺耳，直到后来。    
+国敏坐在我后排的右方，是个短发，大眼睛的姑娘。我跟同桌洪下课时常转过身跟国敏和她同桌聊天。国敏是个有点害羞的姑娘，但却是唯一一个肯当面告诉我我哪些地方做得不好的人。如前所说，我跟那些来自周边乡镇的同学有种天然的亲切感，所以很快就跟他们打成了一片，成为了好朋友。但我不知道的是，虽然在我的眼里，我跟他们是一样来自乡镇的人，但在他们眼里我却始终是个城里学生，只是比较好打交道而已。我们虽然是朋友，但是中间却有个我看不见的隔阂。我跟初中朋友们一起讨论问题或聊天时，常开玩笑互相打击，口头禅是「笨蛋，这都不会」等等。但大家互相都如此，并不觉得有什么不好。我跟这些新朋友相处，有时他们会拿一些题来问我，我还是像跟以前的朋友一样用这个方式说话，且一直没有发现这有什么问题。但在那些朋友听来，这个「笨蛋」不像是来自一个朋友无心的玩笑，更像是来自一个学习远比他们好的城里学生的傲慢。虽然大家听到我这么说话心里不舒服，可他们又觉得我不像是会用这种傲慢语气说话的人，于是最终都默默忍了，始终没有人跟我提过这事。直到一天，国敏叫住我，并在犹豫了一下后把这些事都告诉我。她说，其实大家一起议论过几次我为什么会那么说话，但最后他们都替我开脱，说我应该是没有什么恶意的。知道了这件事后，我开始有意识地改变说话的方式，但我当时依然没有明白为什么这句以前常说的口头禅在那些同学听来会有些刺耳，直到后来。    
 
-一次课间，我回头跟国敏聊天时发现她桌上有本绿色的辅导书，大概有两三百页。奇怪的是，那本书右上角上有个窟窿。细看下，应该是有人用刀一页一页地把原本印在那里的几个字剜掉了---几百页全剜完就成了我看到的那个窟窿。我问国敏那是什么，怎么剜掉了？国敏说，没什么。有一次，我逛书店，看到教辅栏有本绿色的书，看起来跟国敏桌上那本很像。细看下，确实是同一本。眼睛看到右上角，原来在国敏剜掉的那个地方印有三个字，「高材生」。我立刻记起国敏书上的那个窟窿，好像看到了国敏一页页地把「高材生」三个字裁掉的画面，心里受了个重击。我没有想到一本教辅书上打广告的「高材生」三个字会给国敏这么大的压力，想不到平时开起来开开心心的国敏有这么自卑的一面。我翻着那本书，觉得里面的讲解挺不错的，正想要买回去吗？这时，我又看到那「高材生」三个字，不知道为什么，我突然在心里问自己「我是高材生吗？」「凭什么认为自己是高材生？」突然，「高材生」三个字显得那么扎眼，我心里不禁一颤。我仿佛体会到了国敏的自卑心情，愣了一会儿后，把书放了回去。回家后，「高材生」，「笨蛋」这些声音在我耳边响起，心里感到有些难受，好像有一个我在用这些声音嘲笑另一个我。其实按我平时粗心的风格，可能把这书买回家了也不一定会注意到上边有什么字；或者即使看到了那些字，也只会觉得那只是个广告语而已，不会多想。但现在，我已无法忽略那几个字了。这种心态的剧变让我了解了我之前说的「笨蛋」可能会给那些敏感的同学带来的刺痛。我心里很抱歉，却已无法收回以前说过的那些话。      
+一次课间，我回头跟国敏聊天时发现她桌上有本绿色的辅导书，大概有两三百页。奇怪的是，那本书右上角上有个窟窿。细看下，应该是有人用刀一页一页地把原本印在那里的几个字剜掉了---几百页全剜完就成了我看到的那个窟窿。我问国敏那是什么，怎么剜掉了？国敏说，没什么。有一次，我逛书店，看到教辅栏有本绿色的书，看起来跟国敏桌上那本很像。细看下，确实是同一本。眼睛看到右上角，原来在国敏剜掉的那个地方印有三个字，「高材生」。我立刻记起国敏书上的那个窟窿，好像看到了国敏一页页地把「高材生」三个字裁掉的画面，心里受了个重击。我没有想到一本教辅书上打广告的「高材生」三个字会给国敏这么大的压力，想不到平时开开心心的国敏有这么敏感，自卑的一面。我翻着那本书，觉得里面的讲解挺不错的，正考虑要买一本回去吗？这时，我又看到那「高材生」三个字，不知道为什么，我突然在心里问自己「我是高材生吗？」「凭什么？」突然，「高材生」三个字显得那么扎眼，我心里不禁一颤。我仿佛体会到了国敏的自卑心情，愣了一会儿后，把书放了回去。回家后，「高材生」，「笨蛋」这些声音在我耳边响起，心里感到有些难受，好像有一个我在用这些声音嘲笑另一个我。其实按我平时粗心的风格，可能把这书买回家了也不一定会注意到上边有什么字；或者即使看到了那些字，也只会觉得那只是个广告语而已，不会多想。但现在，我已无法忽略那几个字了。这种心态的剧变让我了解了我之前说的「笨蛋」会给那些敏感的同学带来的刺痛。我心里很抱歉，却已无法收回以前说过的那些话。      
 
 
 ### 阿杜  
 
-阿杜是我高一高二的数学老师。她那时刚大学毕业，我们是她第一批学生。她脸圆圆的，眼睛弯弯的，带个圆框眼镜，看起来有点像加菲猫。    
+阿杜是我高一高二的数学老师。她那时刚大学毕业，我们是她第一批学生。她脸圆圆的，眼睛弯弯，带个圆框眼镜，看起来有点像加菲猫。    
 
-阿杜是个很感性的人，把学生当朋友。高兴的时候就哈哈哈大笑，被惹火了，也会骤然变色。但同学们都不怕她，因为她就算生气了也会很快好起来。一次，有同学知道了阿杜生日将近，我们打算秘密为她准备了一个惊喜。那天，阿杜守晚自习，等她走进教室后，埋伏好的同学突然把教室的灯全关了，然后大家一起鼓掌，还有几个同学欢呼起来。不知道我们秘密计划的阿杜完全蒙圈了，她被吓了一大跳，然后直接反应是生气。她厉声制止了大家的吵闹，并命令大家立刻把灯打开，回座位做好。我们也被阿杜生了这么大的气吓到了，有些同学去开灯，有个同学（忘了是谁）赶紧跑到讲台上，把事先准备的心形蜡烛点燃，然后跟阿杜说，杜老师，生日快乐。阿杜又一次懵圈了，她看着点燃的蜡烛，再抬起头来时已满脸泪水。她用激动到颤抖，且带着哭音的声音说，把灯关上吧。同学们把灯关上，在黑暗中，大家围着阿杜唱生日歌，暖暖的烛光照亮了她的泪水。    
+阿杜是个很感性的人，把学生当朋友。高兴的时候就哈哈哈大笑，被惹火了，也会骤然变色。但同学们都不怕她，因为她就算生气了也会很快好起来。一次，有同学知道了阿杜生日将近，打算秘密为她准备了一个惊喜。那天，阿杜守晚自习，等她走进教室后，埋伏好的同学突然把教室的灯全关了，然后大家一起鼓掌，还有几个同学欢呼起来。不知道我们秘密计划的阿杜完全蒙圈了，她被吓了一大跳，然后直接反应是生气。她厉声制止了大家的吵闹，并命令大家立刻把灯打开，回座位做好。我们也被阿杜生了这么大的气吓到了，有些同学去开灯，有些同学赶紧跑到讲台上，把事先准备的心形蜡烛点燃，然后跟阿杜说，杜老师，生日快乐。阿杜又一次懵圈了，她怔怔地看着点燃的蜡烛，再抬起头来时已满脸泪水。她用激动得颤抖，且带着哭音的声音说，把灯关上吧。于是，同学们再次把灯关上，在黑暗中，大家围着阿杜唱生日歌，暖暖的烛光照亮了她的泪水。    
 
-高二刚开学有个数学竞赛，我们学校高二高三的学生都参加了。成绩下来后，阿杜高兴地跑来跟我说，我考了全校第一名，比那帮高三学生还厉害，要去参加省里的比赛；她也因此被教研组组长给表扬了。说完，她从背后刷地变出盒巧克力递到我面前，拍拍我的肩说，组长交了个任务给她，以后每个周末要给我加餐补课，为去省里比赛做准备。于是，那段时间每个周末我就去阿杜宿舍「加餐补课」。加餐是真加餐了，因为阿杜会给我做好吃的，但课一次没补，因为我们都对那个比赛没什么兴趣。除了吃好吃的，就是跟阿杜聊天，看电影，真正成为了无话不谈的朋友。其实从高一开始，阿杜就对我特别好，我一直以为那是因为阿杜本来随和的缘故，那段时间里我才知道还有别的原因。   
+高二刚开学有个数学竞赛，我们学校高二高三的学生都参加了。成绩下来后，阿杜高兴地跑来跟我说，我考了全校第一名，比那帮高三学生还厉害，要去参加省里的比赛了；她也因此被教研组组长给表扬了。说完，她从背后刷地变出盒巧克力递到我面前，拍拍我的肩说，组长交了个任务给她，以后每个周末要给我加餐补课，为去省里比赛做准备。于是，那段时间每个周末我就去阿杜宿舍「加餐补课」。加餐是真加餐了，因为阿杜会给我做好吃的，但课一次没补，因为我们都对那个比赛没什么兴趣。除了吃好吃的，就是跟阿杜聊天，看电影，真正成为了无话不谈的朋友。其实从高一开始，阿杜就对我特别好，我一直以为那是因为阿杜本来随和的缘故，那段时间里我才知道还有别的原因。   
 
-阿杜虽然平时嘻嘻哈哈的，但却是个有些宿命感的人。她跟我讲过一件事，说她家里有些长辈到中年就会生一种病，且很快就会过世，一般不过五十岁。一次她去峨眉山，突然来个人让她去跟一群人见面。见面后，一人告诉说她有些佛缘，建议她出家。她一个妙龄女子，遇到这种事简直是荒了天下之大谬。她正要走，一个人对她说，她四十多会得场大病，出家才能化解，不然到不了五十岁。阿杜心下骇然，但是还是离开了。跟我讲这个故事时，阿杜说，她以后可能会回去。    
+阿杜虽然平时嘻嘻哈哈的，但却是个有些宿命感的人。她跟我讲过一件事，说她家里有些长辈到中年就会生一种病，且很快就会过世，一般不过五十岁。一次她去峨眉山，突然来个人让她去跟一群人见面。见面后，一人告诉说她有些佛缘，建议她出家。她一个妙龄女子，遇到这种事简直是荒了天下之大谬。她正要走，那人对她说，她四十多会得场大病，出家才能化解，不然到不了五十岁。阿杜心下骇然，但是还是离开了。跟我讲这个故事时，阿杜说，她以后可能会回去。    
 
-高三分班后，阿杜就没有教我了，以后我就很少见到她。高考结束，我也没找到阿杜，听说她好像直接回家了。后来听一些她教的学生说，阿杜那一年过得很不好，因为有几个学生老跟她作对。她摆不出老师的架子来处理，也无法忽略掉，心理负担很大。她学生跟我说，她不时会讲以前跟我的一些故事，像我撺掇她看恐怖片，然后看到一半我跑掉了什么的；说讲这些事时阿杜很开心，说她有个本子把这些事都记着的。我听过不只一个她的学生讲类似的事情。但为什么阿杜过得那么不顺，却没有一次来跟我说说。她可能是觉得我在高三，压力也很大吧。即便想到她可能有此顾虑，但我心里还是忍不住有点生气，本不必这样的。后来阿杜好像离开了我们高中。      
+高三分班后，阿杜就没有教我了，以后我就很少再见到她。高考结束，我也没找到阿杜，听说她好像直接回家了。听一些她教的学生说，阿杜那一年过得很不好，因为有几个学生老跟她作对。她摆不出老师的架子来处理，也无法忽略掉，心理负担很大。她学生跟我说，她不时会讲以前跟我的一些故事，像我撺掇她看恐怖片，然后看到一半我又跑掉了什么的；讲这些事时阿杜很开心，说她有个本子把这些事都记着的。她不只一个她的学生跟我讲过类似的事情。但为什么阿杜过得那么不顺，却没有一次来跟我说说。她可能是觉得我在高三，压力也很大吧。即便想到她可能有此顾虑，但我心里还是忍不住有点生气，本不必这样的。后来阿杜好像离开了我们高中。      
 
 不知道阿杜现在在哪里，希望她过得开心。   
 
 ### 老许 
 
-老许是我高二高三的班主任，是个很严厉的化学老师；责任心极强，在学校德高望重，连校长都敬她三分。我上高中那几年，市里搞教育改革，不许寒暑假补课（其实，就县里的学校执行了，市里的高中都在顶风补课），以至于我们各科上课的进程都很慢，高三了很多科目还在上新课。老许为了赶进度，每次上完课就布置作业，到晚自习的时候就评讲。懒如我，自然是不会拿课间时间去做作业的，另外，因为上课时大部分时间是在摸鱼（高中摸了两年鱼，原因暂时不提；因为我基础比其他同学好很多，加上考试前临时抱佛脚，才勉强维持了相对不错的成绩），所以其实也不会做。有一次，老许讲了半天习题了，走到我面前时发现我习题册还没有翻开，于是就翻开看起来。这一看不要紧，我的习题册基本是空的，很久前的作业都没坐，气得她把那本册子直接扔出了窗外。还有一次国庆假期结束，我完全忘了老许布置了几张卷子的作业。等课代表来收作业时，我不知道脑袋进了什么水，居然把第一张卷子的第一面写上，最后一张卷子的最后一页写上，然后拿订书机把这几张卷子叠一起，给订上了。当时心里想的居然是，老许批改作业时，一翻翻不开，估计就算了。没想到......    
+老许是我高二高三的班主任，是个很严厉的化学老师；责任心极强，在学校德高望重，连校长都敬她三分。我上高中那几年，市里搞教育改革，不许寒暑假补课（其实，就县里的学校执行了，市里的高中都在顶风补课），以至于我们各科上课进度都很慢，以至于最后到高三了很多科目还在上新课。老许为了赶进度，每次上完课就布置作业，到晚自习的时候就评讲。懒如我，自然是不会拿课间时间去做作业的，另外，因为上课时大部分时间是在摸鱼（高中摸了两年鱼，原因暂时不提；因为我基础比其他同学好很多，加上考试前临时抱佛脚，才勉强维持了相对不错的成绩），所以其实也不会做。有一次，老许讲了半天习题了，走到我面前时发现我习题册还没有翻开，于是就拿起来翻看。这一看不要紧，我的习题册基本是空的，很久前的作业都没做，气得她把那本册子直接扔出了窗外。还有一次国庆假期结束，我完全忘了老许布置了几张试卷的作业。等课代表来收作业时，我不知道脑袋进了什么水，居然只把第一张卷子的第一面和最后一张卷子的最后一页写上，然后拿订书机把这几张卷子叠一起，给订上交上去了。当时心里想的是，老许批改作业时，一翻翻不开，估计就算了。没想到......    
 
 那次好像被老许请家长了。    
 
-在那之后不久，我因为打乒乓球，上老许的课迟到，于是又被老许往家里告了状。跟我妈打完电话后，老许居然过来跟我说，这次是你妈妈给我打过来的电话哈，我本来没打算让她知道的，把锅甩得一干二净。我回家后，问我妈为什么突然跟许老师打电话过去。我妈说，她听到电话响一声后挂断了，拿起来一看是许老师打的，当然要回过去啊......     
+在那之后不久，我因为打乒乓球，上老许的课迟到，于是又被老许告了状。跟我妈打完电话后，老许过来跟我说，这次是你妈妈给我打过来的电话哈，我本来没打算让她知道的，把锅甩得一干二净。我回家后，问我妈为什么突然跟许老师打电话过去。我妈说，她听到电话响一声后挂断了，拿起来一看是许老师打的，当然要回过去啊......     
 
 
-高三时，我高一高二摸鱼的后果开始暴露出来了，特别是在理科综合上。高三的第一次诊断考试，我的理综只考了 130 分 (满分三百)。老许急得找我谈话，让我没想到的她居然跟我打赌，说下次考试如果能提高 xx 分，就请我吃零食。虽然我长期摸鱼，但却真心想考个好大学，老许就算不跟我打赌，我也知道理综是必须要考好的。而且那时，前两年摸鱼的「病根」已经「治」好了，我开始上课专心听讲，下课认真做作业，进入了整个高中阶段最努力的时期。功夫不负有心人，我理综成绩也稳步提高，几个月后，就能稳定考到 260 左右了。在这个过程中，吃了老许不少零食，因为她总在我达到一个小目标后，马上提出下一个，继续跟我赌。    
+高三时，我高一高二摸鱼的后果开始暴露出来了，特别是在理科综合上。高三的第一次诊断考试（好像是叫这个名字吧，记不大清了），我的理综只考了 130 分 （满分三百）。老许急得找我谈话，让我没想到的她居然跟我打赌，说下次考试如果能提高 xx 分，就请我吃零食。虽然我长期摸鱼，但却想考个好大学的心却一直没有变过，老许就算不跟我打赌，我也知道理综是必须要考好的。而且那时，前两年摸鱼的「病根」已经「治」好了，我开始上课专心听讲，下课认真做作业，进入了整个高中阶段最努力的时期。功夫不负有心人，我理综成绩也稳步提高，几个月后，就能稳定考到 260 左右了。在这个过程中，吃了老许不少零食，因为她总在我达到一个小目标后，马上提出下一个，继续跟我赌。    
 ### 最终   
 
-最终，我高考还是没有考好，离自己的原定目标差了很多。不过，老许并没有说什么。那年我们级高考全军覆没，我是几百个理科应届生里唯一一个勉强考入一本学校的。全军覆没的原因有很多，师资流失，生源不好，机械执行不合理的教改规定，教学氛围整体恶化等。那年以后，我们高中进行了很多改革，采取了补救措施，教学质量开始提升。回看过去，我们那年可算是名副其实的触底了。   
+最终，我高考还是没有考好，离自己的原定目标差了很多。不过，老许并没有说什么。那年我们级高考全军覆没，我是几百个理科应届生里唯一一个勉强考入一本学校的。全军覆没的原因有很多，师资流失，生源不好，机械执行不合理的教改规定，教学氛围恶化等。那年以后，我们高中进行了很多改革，采取了补救措施，教学质量开始提升。回看过去，我们那年可算是名副其实的触底了。   
 
 虽然很多高中同学在毕业后就没有再见过，但他们的影响直到现在也不时会体现在我的一些行为上。那些高一，高二就离开的同学和那些和我一起走过三年的同学，真希望他们一切都好。
 
