--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -18,7 +18,7 @@ tags: []
 
 ### 小芳  
 
-小芳姓谢，是个面容清癯，身材苗条的女孩子，头发垂到比肩膀稍低的地方，很直，有时会绑起来。她常穿一条蓝色牛仔裤，由于人比较瘦，那牛仔裤看起来很宽松。小芳话很少，说话时声音也很低，印象中听起来很温柔。我不知道她年纪比我大还是小，只是记得她跟我说话时很多都是嘱咐的语气。嘱咐的是些什么事现在完全想不起来了，只是还记得那细心。有时课间我跟朋友们出去玩的时候，她会坐到我位子上，帮我把散乱的书收起来。要是我回教室的时候正好碰到她在帮我理书，就站一旁等着她。「不知道这回能管多久？」有时，她理完后会拍着书有点无奈地笑着对我说。     
+小芳姓谢，是个面容清癯，身材苗条的女孩子，头发垂到比肩膀稍低的地方，很直，有时会绑起来。她常穿一条蓝色牛仔裤，由于人比较瘦，那牛仔裤看起来很宽松。小芳话很少，说话时声音也很低，印象中听起来很温柔。我不知道她年纪比我大还是小，只是记得她跟我说话时很多都是嘱咐的语气。嘱咐的是些什么事现在完全想不起来了，只是还记得那细心。课间我跟朋友们出去玩的时候，她会坐到我位子上，帮我把散乱的书收起来。要是我回教室的时候正好碰到她在帮我理书，就站一旁等着她。「不知道这回能管多久？」有时，她理完后会拍着书有点无奈地笑着对我说。     
 
 高一下期的一天，她走到我桌旁，示意我从座位上起来。然后她就坐到我位置上整理起书来，神色凝重。她边理边跟我说了些话，还是嘱咐的语气，温柔的声音。最后，她站起来有点神色惨淡地跟我说，以后你得自己理了。我感觉她很难过，但却不知道为什么。那天后，小芳就再也没有来上学了。   
 
