--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -59,7 +59,7 @@ tags: []
 
 最终，我高考还是没有考好，离自己的原定目标差了很多。不过，老许并没有说什么。那年我们级高考全军覆没，我是几百个理科应届生里唯一一个勉强考入一本学校的。全军覆没的原因有很多，师资流失，生源不好，机械执行不合理的教改规定，教学氛围恶化等。那年以后，我们高中进行了很多改革，采取了补救措施，教学质量开始提升。回看过去，我们那年可算是名副其实的触底了。   
 
-虽然很多高中同学在毕业后就没有再见过，但他们的影响直到现在也不时会体现在我的一些行为和心态上。那些高一，高二就离开的同学和那些和我一起走过三年的同学，真希望他们一切都好。
+虽然很多高中同学在毕业后就没有再见过，但他们的影响直到现在也不时会体现在我的一些行为和心态上。那些高一，高二就离开的同学和那些和我一起走过三年的同学，希望他们一切都好。
 
 
 
