--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -39,15 +39,15 @@ tags: []
 
 高二刚开学有个数学竞赛，我们学校高二高三的学生都参加了。成绩下来后，阿杜高兴地跑来跟我说，我考了全校第一名，比那帮高三学生还厉害，要去参加省里的比赛了；她也因此被教研组组长给表扬了。说完，她从背后刷地变出盒巧克力递到我面前，拍拍我的肩说，组长交了个任务给她，以后每个周末要给我加餐补课，为去省里比赛做准备。于是，那段时间每个周末我就去阿杜宿舍「加餐补课」。加餐是真加餐了，因为阿杜会给我做好吃的，但课一次没补，因为我们都对那个比赛没什么兴趣。除了吃好吃的，就是跟阿杜聊天，看电影，真正成为了无话不谈的朋友。其实从高一开始，阿杜就对我特别好，我一直以为那是因为阿杜本来随和的缘故，那段时间里我才知道还有别的原因。   
 
-阿杜虽然平时嘻嘻哈哈的，但却是个有些宿命感的人。她跟我讲过一件事，说她家里有些长辈到中年就会生一种病，且很快就会过世，一般不过五十岁。一次她去峨眉山，突然来个人让她去跟一群人见面。见面后，一人告诉说她有些佛缘，建议她出家。她一个妙龄女子，遇到这种事简直是荒了天下之大谬。她正要走，那人对她说，她四十多会得场大病，出家才能化解，不然到不了五十岁。阿杜心下骇然，但是还是离开了。跟我讲这个故事时，阿杜说，她以后可能会回去。    
+阿杜虽然平时嘻嘻哈哈的，但却是个有些宿命感的人。她跟我讲过一件事，说她家里有些长辈到中年就会生一种病，且很快就会过世，一般不过五十岁。一次她去峨眉山，突然来个人让她去跟一群人见面。见面后，一人告诉说她有些佛缘，建议她出家。她一个妙龄女子，遇到这种事简直是荒了天下之大谬。正要走，那人对她说，她四十多会得场大病，出家才能化解，不然到不了五十岁。阿杜心下骇然，但是还是离开了。跟我讲这个故事时，阿杜说，她以后可能会回去。    
 
-高三分班后，阿杜就没有教我了，以后我就很少再见到她。高考结束，我也没找到阿杜，听说她好像直接回家了。听一些她教的学生说，阿杜那一年过得很不好，因为有几个学生老跟她作对。她摆不出老师的架子来处理，也无法忽略掉，心理负担很大。她学生跟我说，她不时会讲以前跟我的一些故事，像我撺掇她看恐怖片，然后看到一半我又跑掉了什么的；讲这些事时阿杜很开心，说她有个本子把这些事都记着的。她不只一个她的学生跟我讲过类似的事情。但为什么阿杜过得那么不顺，却没有一次来跟我说说。她可能是觉得我在高三，压力也很大吧。即便想到她可能有此顾虑，但我心里还是忍不住有点生气，本不必这样的。后来阿杜好像离开了我们高中。      
+高三分班后，阿杜就没有教我了，以后我就很少再见到她。高考结束，我也没找到阿杜，听说她好像直接回家了。听一些她教的学生说，阿杜那一年过得很不好，因为有几个学生老跟她作对。她摆不出老师的架子来处理，也无法忽略掉，心理负担很大。她学生跟我说，她不时会讲以前跟我的一些故事，像我撺掇她看恐怖片，然后看到一半我又跑掉了什么的；讲这些事时阿杜很开心，说她有个本子把这些事都记着的。不只一个她的学生跟我讲过类似的事情。但为什么阿杜过得那么不顺，却没有一次来跟我说说。她可能是觉得我在高三，压力也很大吧。即便想到她可能有此顾虑，但我心里还是忍不住有点生气，本不必这样的。后来阿杜好像离开了我们高中。      
 
 不知道阿杜现在在哪里，希望她过得开心。   
 
 ### 老许 
 
-老许是我高二高三的班主任，是个很严厉的化学老师；责任心极强，在学校德高望重，连校长都敬她三分。我上高中那几年，市里搞教育改革，不许寒暑假补课（其实，就县里的学校执行了，市里的高中都在顶风补课），以至于我们各科上课进度都很慢，以至于最后到高三了很多科目还在上新课。老许为了赶进度，每次上完课就布置作业，到晚自习的时候就评讲。懒如我，自然是不会拿课间时间去做作业的，另外，因为上课时大部分时间是在摸鱼（高中摸了两年鱼，原因暂时不提；因为我基础比其他同学好很多，加上考试前临时抱佛脚，才勉强维持了相对不错的成绩），所以其实也不会做。有一次，老许讲了半天习题了，走到我面前时发现我习题册还没有翻开，于是就拿起来翻看。这一看不要紧，我的习题册基本是空的，很久前的作业都没做，气得她把那本册子直接扔出了窗外。还有一次国庆假期结束，我完全忘了老许布置了几张试卷的作业。等课代表来收作业时，我不知道脑袋进了什么水，居然只把第一张卷子的第一面和最后一张卷子的最后一页写上，然后拿订书机把这几张卷子叠一起，给订上交上去了。当时心里想的是，老许批改作业时，一翻翻不开，估计就算了。没想到......    
+老许是我高二高三的班主任，是个很严厉的化学老师；责任心极强，在学校德高望重，连校长都敬她三分。我上高中那几年，市里搞教育改革，不许寒暑假补课（其实，就县里的学校执行了，市里的高中都在顶风补课），以至于我们各科上课进度都很慢，以至于最后到高三了很多科目还在上新课。老许为了赶进度，每次上完课就布置作业，到晚自习的时候就评讲。懒如我，自然是不会拿课间时间去做作业的，另外，因为上课时大部分时间是在摸鱼（高中摸了两年鱼，原因暂时不提；只是因为我基础比其他同学好很多，加上考试前临时抱佛脚，才勉强维持了相对不错的成绩），所以其实也不会做。有一次，老许讲了半天习题了，走到我面前时发现我习题册还没有翻开，于是就拿起来翻看。这一看不要紧，我的习题册基本是空的，很久前的作业都没做，气得她把那本册子直接扔出了窗外。还有一次国庆假期结束，我完全忘了老许布置了几张试卷的作业。等课代表来收作业时，我不知道脑袋进了什么水，居然只把第一张卷子的第一面和最后一张卷子的最后一页写上，然后拿订书机把这几张卷子叠一起，给订上交上去了。当时心里想的是，老许批改作业时，一翻翻不开，估计就算了。没想到......    
 
 那次好像被老许请家长了。    
 
