--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -47,7 +47,7 @@ tags: []
 
 ### 老许 
 
-老许是我高二高三的班主任，是个很严厉的化学老师；责任心极强，在学校德高望重，连校长都敬她三分。我上高中那几年，市里搞教育改革，不许寒暑假补课（其实，就县里的学校执行了，市里的高中都在顶风补课），以至于我们各科上课进度都很慢，以至于最后到高三了很多科目还在上新课。老许为了赶进度，每次上完课就布置作业，到晚自习的时候就评讲。懒如我，自然是不会拿课间时间去做作业的，另外，因为上课时大部分时间是在摸鱼（高中摸了两年鱼，原因暂时不提；只是因为我基础比其他同学好很多，加上考试前临时抱佛脚，才勉强维持了相对不错的成绩），所以其实也不会做。有一次，老许讲了半天习题了，走到我面前时发现我习题册还没有翻开，于是就拿起来翻看。这一看不要紧，我的习题册基本是空的，很久前的作业都没做，气得她把那本册子直接扔出了窗外。还有一次国庆假期结束，我完全忘了老许布置了几张试卷的作业。等课代表来收作业时，我不知道脑袋进了什么水，居然只把第一张卷子的第一面和最后一张卷子的最后一页写上，然后拿订书机把这几张卷子叠一起，给订上交上去了。当时心里想的是，老许批改作业时，一翻翻不开，估计就算了。没想到......    
+老许是我高二高三的班主任，是个很严厉的化学老师；责任心极强，在学校德高望重，连校长都敬她三分。我上高中那几年，市里搞教育改革，不许寒暑假补课（其实，就县里的学校执行了，市里的高中都在顶风补课），以至于我们各科上课进度都很慢，以至于最后到高三了很多科目还在上新课。老许为了赶进度，每次上完课就布置作业，到晚自习的时候就评讲。懒如我，自然是不会拿课间时间去做作业的，另外，因为上课时大部分时间是在摸鱼（高中摸了两年鱼，原因暂时不提；只是因为我基础比其他同学好很多，加上考试前临时抱佛脚，才勉强维持了相对不错的成绩），所以其实也不会做。有一次，老许讲了半天习题了，走到我面前时发现我习题册还没有翻开，于是就拿起来翻看。这一看不要紧，我的习题册基本是空的，很久前的作业都没做，气得她把那本册子直接扔出了窗外。还有一次国庆假期结束，我完全忘了老许布置了几张试卷的作业。等课代表来收作业时，我不知道脑袋进了什么水，居然只把第一张卷子的第一面和最后一张卷子的最后一页写上，然后拿订书机把这几张卷子叠一起，把四个角都订上，然后交上去了。当时心里想的是，老许批改作业时，一翻翻不开，估计就算了。没想到......    
 
 那次好像被老许请家长了。    
 
