--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -54,7 +54,7 @@ tags: []
 在那之后不久，我因为打乒乓球，上老许的课迟到，于是又被老许告了状。跟我妈打完电话后，老许过来跟我说，这次是你妈妈给我打过来的电话哈，我本来没打算让她知道的，把锅甩得一干二净。我回家后，问我妈为什么突然跟许老师打电话。我妈说，她听到电话响一声后挂断了，拿起来一看是许老师打的，当然要回过去啊......     
 
 
-高三时，我高一高二摸鱼的后果开始暴露出来了，特别是在理科综合上。高三的第一次诊断考试（好像是叫这个名字吧，记不大清了），我的理综只考了 130 分 （满分三百）。老许急得找我谈话，让我没想到的是，一向严肃的她居然跟我打赌，说下次考试如果能提高 xx 分，就请我吃零食。虽然我长期摸鱼，但想考个好大学的心却一直没有变过，老许就算不跟我打赌，我也知道理综是必须要考好的。而且那时，前两年摸鱼的「病根」已经「治」好了，我开始上课专心听讲，下课认真做作业，进入了整个高中阶段最努力的时期。功夫不负有心人，我理综成绩也稳步提高，几个月后，就能稳定考到 260 左右了。在这个过程中，吃了老许不少零食，因为她总在我达到一个小目标后，马上提出下一个，继续跟我赌。    
+高三时，我高一高二摸鱼的后果开始暴露出来了，特别是在理科综合上。由于长期不听讲和不做作业，高三的第一次诊断考试（好像是叫这个名字吧，记不大清了），我的理综只考了 130 分 （满分三百）。老许急得找我谈话，让我没想到的是，一向严肃的她居然跟我打赌，说下次考试如果能提高 xx 分，就请我吃零食。虽然我长期摸鱼，但想考个好大学的心却一直没有变过，老许就算不跟我打赌，我也知道理综是必须要考好的。而且那时，前两年摸鱼的「病根」已经「治」好了，我开始上课专心听讲，下课认真做作业，进入了整个高中阶段最努力的时期。功夫不负有心人，我理综成绩也稳步提高，几个月后，就能稳定考到 260 左右了。在这个过程中，吃了老许不少零食，因为她总在我达到一个小目标后，马上提出下一个，继续跟我赌。    
 ### 最终   
 
 最终，我高考还是没有考好，离自己的原定目标差了很多。不过，老许并没有说什么。那年我们级高考全军覆没，我是几百个理科应届生里唯一一个勉强考入一本学校的。全军覆没的原因有很多，师资流失，生源不好，机械执行不合理的教改规定，教学氛围恶化等。那年以后，我们高中进行了很多改革，采取了补救措施，教学质量开始提升。回看过去，我们那年可算是名副其实的触底了。   
