--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -6,7 +6,7 @@ slug: myhs
 categories: []
 tags: []
 ---
-小学前两年，我在一个乡镇小学念书，从三年级开始转学到了县里。那时我一直不知道如何融入新环境，而时间并不等我，和同学们还没完全熟悉我就升入初中了。初中三年我交了很多朋友，但上高中时又要分开了。因为那时我们县初中的孩子一般都去市里上高中，在县本地高中上学的大多都是周边乡镇来的学生。和我要好的同学们都要去市里读高中了，虽然我的成绩足以进入市里很好的高中，但我因为不想住校而决定留在县里。    
+小学前两年，我在一个乡镇小学念书，从三年级开始转学到了县里。由于性格偏内向，且不擅与陌生人打交道，我一直不知道如何融入新环境，而时间并不等我，和「新」同学们还没完全熟悉我就升入了初中。初中三年我交了很多朋友，但上高中时又要分开了。因为那时我们县初中的孩子一般都去市里上高中，在县本地高中上学的大多都是周边乡镇来的学生。和我要好的同学们都决定去市里读高中，而我虽然成绩足以进入市里很好的高中，但因为不想住校而决定留在县里。    
 
 ### 七班
 
@@ -14,7 +14,7 @@ tags: []
 
 同学们都到了，那老师呢？很快，我就见到了老师们。他们大多是二十出头，刚毕业的大学生。那时，我们县中在全市中学校里是敬陪末座的那种，留不住好老师，让情况雪上加霜的是我入学的那年，县中有个复读班出了两个大神，高考考到了市里的前几名。这成绩成功引起了市里各大高中的注意，于是他们纷纷出手，又薅走了部分本来就所剩不多的优秀老师。于是，为应对师资的严重匮乏，学校去川内的一个师范院校拉了两车刚毕业的学生过来填充。    
 
-高一上学期波澜不惊地过去了，下学期开学回校时，我发现教室突然空了好多。高一开学时，七班有 66 个人，但下期回来时只剩 44 个了。看着教室后头空出来的一大片地，我有点发蒙，问同学们，其他人去哪儿了？他们告诉我，有的回家务农了，有的外出打工了，有些还打算上学，但没钱，家里还在想办法。看着教室后头空荡荡的桌椅，我什么话也说不出。由于家里比较重视教育，我一向认为读书是理所当然的，小学读完上中学，中学读完上大学。但这空空的教室让我心情很沉重，好像有个什么东西，突然苍老了；也明白了在我看来的理所当然，对另一些人来说却无比困难。从那时候开始，我心里有了两个七班，一个是刚入学时那个饱满的，大家脸上洋溢的笑容的七班；另一个是那空空的，让我无言的七班。   
+高一上学期波澜不惊地过去了，下学期开学回校时，我发现教室空了好多。高一开学时，七班有 66 个人，但下期回来时只剩 44 个了。看着教室后头空出来的一大片地，我有点发蒙，问同学们，其他人去哪儿了？他们告诉我，有的回家务农了，有的外出打工了，有些还打算上学，但没钱，家里还在想办法。看着教室后头空荡荡的桌椅，我什么话也说不出。由于家里比较重视教育，我一向认为读书是理所当然的，小学读完上中学，中学读完上大学。但这空空的教室让我心情很沉重，好像有个什么东西，突然苍老了；也明白了在我看来的理所当然，对另一些人来说却无比困难。从那时候开始，我心里有了两个七班，一个是刚入学时那个饱满的，大家脸上洋溢的笑容的七班；另一个是那空空的，让我无言的七班。   
 
 ### 小芳  
 
@@ -51,7 +51,7 @@ tags: []
 
 那次好像被老许请家长了。    
 
-在那之后不久，我因为打乒乓球，上老许的课迟到，于是又被老许告了状。跟我妈打完电话后，老许过来跟我说，这次是你妈妈给我打过来的电话哈，我本来没打算让她知道的---把锅甩得一干二净。后来，问我妈当时为什么突然跟许老师打电话。我妈说，她听到电话响一声后挂断了，拿起来一看是许老师打的，当然要回过去啊......     
+在那之后不久，我因为打乒乓球，上老许的课迟到，于是被老许打电话告了状。跟我妈打完电话后，老许过来跟我说，这次是你妈妈给我打过来的电话哈，我本来没打算让她知道的---把锅甩得一干二净。后来，问我妈当时为什么突然跟许老师打电话。我妈说，她听到电话响一声后挂断了，拿起来一看是许老师打的，当然要回过去啊......     
 
 
 高三时，我高一高二摸鱼的后果开始暴露出来了，特别是在理科综合上。由于长期不听讲和不做作业，高三的第一次诊断考试（好像是叫这个名字吧，记不大清了），我的理综只考了 130 分 （满分三百）。老许急得找我谈话，让我没想到的是，一向严肃的她居然跟我打赌，说下次考试如果能提高 xx 分，就请我吃零食。虽然我长期摸鱼，但想考个好大学的心却一直没有变过，老许就算不跟我打赌，我也知道理综是必须要考好的。而且那时，前两年摸鱼的「病根」已经「治」好了，我开始上课专心听讲，下课认真做作业，进入了整个高中阶段最努力的时期。功夫不负有心人，我理综成绩稳步提高，几个月后，就能稳定考到 260 左右了。在这个过程中，吃了老许不少零食，因为她总在我达到一个小目标后，马上提出下一个，继续跟我赌。    
