--- a/content/cn/2021-11-26-myhs.md
+++ b/content/cn/2021-11-26-myhs.md
@@ -26,7 +26,7 @@ tags: []
 
 ### 国敏  
 
-国敏坐在我后排的右方，是个短发，大眼睛的姑娘。我跟同桌洪下课时常转过身跟国敏和她同桌聊天。国敏是个有点害羞的姑娘，但却是唯一一个肯当面告诉我我哪些地方做得不好的人。如前所说，我跟那些来自周边乡镇的同学有种天然的亲切感，所以很快就跟他们打成了一片，成为了好朋友。但我不知道的是，虽然在我的眼里，我跟他们是一样来自乡镇的人，但在他们眼里我却始终是个城里学生，只是比较好打交道而已。我们虽然是朋友，但是中间却有个我看不见的隔阂。我跟初中朋友们一起讨论问题或聊天时，常开玩笑互相打击，口头禅是「笨蛋，这都不会」等等。但大家互相都如此，并不觉得有什么不好。我跟这些新朋友相处，有时他们会拿一些题来问我，我还是像跟以前的朋友一样用这个方式说话，且一直没有发现这有什么问题。但在那些朋友听来，这个「笨蛋」不像是来自一个朋友无心的玩笑，更像是来自一个学习远比他们好的城里学生的傲慢。虽然大家听到我这么说话心里不舒服，可他们又觉得我不像是会用这种傲慢语气说话的人，于是最终都默默忍了，始终没有人跟我提过这事。直到一天，国敏叫住我，并在犹豫了一下后把这些事都告诉我。她说，其实大家一起议论过几次我为什么会那么说话，但最后他们都替我开脱，说我应该是没有什么恶意的。知道了这件事后，我开始有意识地改变说话的方式，但我当时依然没有明白为什么这句以前常说的口头禅在那些同学听来会有些刺耳，直到后来。    
+国敏坐在我后排的右方，是个短发，大眼睛的姑娘。我跟同桌洪下课时常转过身跟国敏和她同桌聊天。国敏是个有点害羞的姑娘，但却是唯一一个肯当面告诉我我哪些地方做得不好的人。如前所说，我跟那些来自周边乡镇的同学有种天然的亲切感，所以很快就跟他们打成了一片，成为了好朋友。但我不知道的是，虽然在我的眼里，我跟他们是一样来自乡镇的人，但在他们眼里我却始终是个城里学生，只是比较好打交道而已。我们虽然是朋友，但是中间却有个我看不见的隔阂。我跟初中朋友们一起讨论问题或聊天时，常开玩笑互相打击，口头禅是「笨蛋，这都不会」等等。大家互相都如此，并不觉得有什么不好。跟这些新朋友相处时我也感到融洽，放松，和久识的朋友一样。有时他们会拿一些题来问我，我还是会像跟以前的朋友相处时一样说话，「笨蛋，这都不会」，且一直没有发觉这有什么问题。但在那些朋友听来，这个「笨蛋」却不像是来自一个朋友无心的玩笑，更像是来自一个学习远比他们好的城里学生的傲慢。虽然大家听到我这么说话心里不舒服，可他们又觉得我不像是会用这种傲慢语气说话的人，于是最终都默默忍了，始终没有人跟我提过这事。直到一天，国敏叫住我，并在犹豫了一下后把这些事都告诉我。她说，其实大家一起议论过几次我为什么会那么说话，但最后他们都替我开脱，说我应该是没有什么恶意的。知道了这件事后，我开始有意识地改变说话的方式，但我当时依然没有明白为什么这句以前常说的口头禅在那些同学听来会有些刺耳，直到后来。    
 
 一次课间，我回头跟国敏聊天时发现她桌上有本绿色的辅导书，大概有两三百页。奇怪的是，那本书右上角上有个窟窿。细看下，应该是有人用刀一页一页地把原本印在那里的几个字剜掉了---几百页全剜完就成了我看到的那个窟窿。我问国敏那是什么，怎么剜掉了？国敏说，没什么。有一次，我逛书店，看到教辅栏有本绿色的书，看起来跟国敏桌上那本很像。细看下，确实是同一本。眼睛看到右上角，原来在国敏剜掉的那个地方印有三个字，「高材生」。我立刻记起国敏书上的那个窟窿，好像看到了国敏一页页地把「高材生」三个字裁掉的画面，心里受了个重击。我没有想到一本教辅书上打广告的「高材生」三个字会给国敏这么大的压力，想不到平时开开心心的国敏有这么敏感，自卑的一面。我翻着那本书，觉得里面的讲解挺不错的，正考虑要不要买一本，这时，我又看到那「高材生」三个字，不知道为什么，我突然在心里问自己「我是高材生吗？」「凭什么？」突然，「高材生」三个字显得那么扎眼，我心里不禁一颤。我仿佛体会到了国敏的心情，愣了一会儿后，把书放了回去。回家后，「高材生」，「笨蛋」这些声音在我耳边响起，心里感到有些难受，好像有一个我在用这些声音嘲笑另一个我。其实按我平时粗心的风格，可能把这书买回家了也不一定会注意到上边有什么字；或者即使看到了那些字，也只会觉得那只是个广告语而已，不会多想。但现在，我已无法忽略那几个字了。这种心态的剧变让我了解了我之前说的「笨蛋」可能会给那些敏感的同学带来的刺痛。我心里很抱歉，却已无法收回以前说过的那些话。      
 
